<resources>
    <string name="app_name">EightBallBooking</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo">logo</string>
    <string name="_8ball_booking">8Ball Booking</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="settings">settings</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>